feat: Add loading indicator and simulate slow API request for token fetching

--- a/src/problem2/tsconfig.json
+++ b/src/problem2/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "jsx": "preserve",
+    "lib": ["dom", "dom.iterable", "esnext"],
     "paths": {
       "@/*": ["./src/*"],
       "@components/*": ["./src/components/*"]
